--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
+            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI, Tableau & ML.</p>
           </div>
         </div>
         <div class="row d-flex">
@@ -399,8 +399,8 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Anuj2731/Cricket_Analysis">Cricket Analytics: Optimal T20 World Cup 2022 Team</a></h3>
-                <p>Analyzed player performance data from the T20 World Cup 2022 to create a data-driven dashboard for selecting the optimal playing XI.</p>
+                <h3 class="heading"><a href="https://github.com/Anuj2731/Cricket_Analysis">Dynamic IPL Insights Dashboard</a></h3>
+                <p>Analyzed IPL player and team performance data (2008–2022) to create an interactive dashboard, providing data-driven insights for strategic decision-making.</p>
               </div>
             </div>
           </div>
@@ -410,19 +410,19 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Anuj2731/Sales_Analysis">Global Superstore Data Analysis</a></h3>
-                <p>Cleaned and processed a customer and sales dataset using Python, then visualized key insights and performance metrics in Power BI to drive data-driven decision-making.</p>
+                <h3 class="heading"><a href="https://github.com/Anuj2731/Sales_Analysis">Superstore Data Analysis</a></h3>
+                <p>Analyzed Superstore sales data to create an interactive Power BI dashboard, uncovering key trends, forecasting sales, and providing actionable insights to optimize revenue and improve business strategies.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/Anuj2731/Covid-19_Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj-6.jpeg');">
+              <a href="https://public.tableau.com/app/profile/anuj.rathod/viz/Netflix_17375929841830/Netflix" class="block-20 zoom-effect" style="background-image: url('images/Netflix_logo.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Anuj2731/Covid-19_Analysis">COVID-19 Data Analysis and Visualization Dashboard</a></h3>
-                <p>Analyzed global COVID-19 trends and visualized key metrics, including cases, recoveries, and deaths, using interactive Power BI dashboards to provide actionable insights.</p>
+                <h3 class="heading"><a href="https://public.tableau.com/app/profile/anuj.rathod/viz/Netflix_17375929841830/Netflix">Netflix Content Analysis</a></h3>
+                <p>This Tableau dashboard provides an in-depth analysis of Netflix's extensive collection of movies and TV shows. The dashboard is designed to deliver key insights into various attributes such as content distribution by country, top genres, ratings, release years, and detailed information on specific titles.</p>
               </div>
             </div>
           </div>
@@ -447,8 +447,8 @@
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/Anuj2731/HR_Analytics">Employee Performance and Attrition Analysis</a></h3>
-				  <p>Analyzed HR data to understand employee performance, retention patterns, and attrition rates, generating insights for improving workforce management and reducing turnover.</p>
+				  <h3 class="heading"><a href="https://github.com/Anuj2731/HR_Analytics">HR Attrition Analysis</a></h3>
+				  <p>Analyzed employee attrition data to create an interactive Power BI dashboard, uncovering key trends, identifying attrition factors, and providing actionable insights to enhance employee retention and optimize HR strategies.</p>
 				</div>
 			  </div>
 			</div>
@@ -519,7 +519,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1ku9LYEGiofk3CGeaSMe7JxZVL63GYY4V/view?usp=sharing">Download</a></p>
+	            <p><a href="https://drive.google.com/file/d/1aXeBF_Sq87x28-TaQnnHNePY91LZucra/view?usp=sharing">Download</a></p>
 	          </div>
           </div>
 
