--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/Anuj2731/HR_Analytics">HR Attrition Analysis</a></h3>
+				  <h3 class="heading"><a href="https://github.com/Anuj2731/HR_Analytics">Employee Attrition Analysis</a></h3>
 				  <p>Analyzed employee attrition data to create an interactive Power BI dashboard, uncovering key trends, identifying attrition factors, and providing actionable insights to enhance employee retention and optimize HR strategies.</p>
 				</div>
 			  </div>
