--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101"></a></p>
+	            <p><a href="tel://0101010101">+1-(249)-989-4327</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -532,7 +532,7 @@
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/anuj-rathod-b59906230/"><span class="icon-linkedin"></span></a></li>  
-					  <li class="ftco-animate"><a href="rathodanuj007@gmail.com"><span class="icon-google"></span></a></li>
+					  <li class="ftco-animate"><a href="mailto:rathodanuj007@gmail.com"><span class="icon-google"></span></a></li>
 					  <li class="ftco-animate"><a href="https://github.com/Anuj2731"><span class="icon-github"></span></a></li>
 				      <li class="ftco-animate"><a href="https://www.instagram.com/_anuj273/"><span class="icon-instagram"></span></a></li>
 					</ul>
