--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101">+1-(249)-989-4327</a></p>
+	            <p><a href="tel://2499894327">+1-(249)-989-4327</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -511,7 +511,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="rathodanuj007@gmail.com">rathodanuj007@gmail.com</a></p>
+	            <p><a href="mailto:rathodanuj007@gmail.com">rathodanuj007@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
