--- a/index.html
+++ b/index.html
@@ -404,6 +404,18 @@
               </div>
             </div>
           </div>
+	<div class="row d-flex">
+          <div class="col-md-4 d-flex ftco-animate">
+          	<div class="blog-entry justify-content-end">
+              <a href="https://github.com/Anuj2731/Expense_Tracker_App" class="block-20 zoom-effect" style="background-image: url('images/proj-7.jpeg');">
+              </a>
+              <div class="text mt-3 float-right d-block">
+
+                <h3 class="heading"><a href="https://github.com/Anuj2731/Expense_Tracker_App">Expense Tracker App</a></h3>
+                <p>Expense Tracker – A Simple Yet Powerful App Built With Python (PyQt6) and SQLite/MySQL to Manage Your Expenses Efficiently!</p>
+              </div>
+            </div>
+          </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <a href="https://github.com/Anuj2731/Sales_Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj-2.jpg');">
