--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 						<br>
 						<br>
-			            <h2>A Software Developer/Data Analyst</h2>
+			            <h2>Software Developer/Data Analyst</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/anuj-rathod-b59906230/" class="btn btn-primary py-3 px-4">Linkedin</a> 
@@ -219,7 +219,7 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Anuj Rathod</span></p>
-										<p><span class="title-s">Job Role: </span> <span>Open To Workt</span></p>
+										<p><span class="title-s">Job Role: </span> <span>Open To Work</span></p>
 										<p><span class="title-s">Experience: </span> <span>1 year</span></p>
 										<p><span class="title-s">Address: </span> <span>Ontario, Canada</span></p>
 									  </div>
@@ -406,6 +406,7 @@
               </div>
             </div>
           </div>
+	</div>
 	<div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
