--- a/index.html
+++ b/index.html
@@ -466,6 +466,18 @@
             		     </div>
           		</div>
 		 </div>
+      		<div class="row d-flex">
+		  <div class="col-md-4 d-flex ftco-animate">
+			<div class="blog-entry justify-content-end">
+		      <a href="https://github.com/Anuj2731/Cricket_Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj-1.png');">
+		      </a>
+		      <div class="text mt-3 float-right d-block">
+	
+			<h3 class="heading"><a href="https://github.com/Anuj2731/Cricket_Analysis">Dynamic IPL Insights Dashboard</a></h3>
+			<p>Analyzed IPL player and team performance data (2008–2022) to create an interactive dashboard, providing data-driven insights for strategic decision-making.</p>
+		      </div>
+		    </div>
+		  </div>
 	  </div>
     </section>
 
